<resources>
    <string name="login">Login</string>
    <string name="signup">Sign Up</string>
    <string name="login_option">login with</string>
    <string name="already">Already have an account?</string>
    <string name="dont">Dont have an account?</string>
    <string name="hint_username">Enter Username</string>
    <string name="hint_email">Enter Email</string>
    <string name="hint_password">Enter Password</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>