<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <com.google.android.material.imageview.ShapeableImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        app:shapeAppearanceOverlay="@style/Circular"
        android:scaleType="fitXY"
        android:layout_marginTop="150dp"
        android:layout_gravity="center"
        android:src="@drawable/snr" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        app:boxStrokeWidth="0dp"
        app:boxStrokeWidthFocused="0dp"
        android:layout_marginTop="7dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:textColorHint="@color/black">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTextPersonName"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:inputType="textPersonName"
            android:background="@drawable/input_background"
            android:hint="@string/hint_username"
            android:textSize="18sp"
            android:backgroundTint="@color/white"
            android:gravity="center" />
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        app:boxStrokeWidth="0dp"
        app:boxStrokeWidthFocused="0dp"
        android:layout_marginTop="7dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:textColorHint="@color/black">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTextTextEmailAddress2"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:inputType="textEmailAddress"
            android:textSize="18sp"
            android:background="@drawable/input_background"
            android:hint="@string/hint_email"
            android:backgroundTint="@color/white"
            android:gravity="center"
            android:ems="15"/>
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        app:boxStrokeWidth="0dp"
        app:boxStrokeWidthFocused="0dp"
        android:layout_marginTop="7dp"
        android:textColorHint="@color/black"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        app:passwordToggleEnabled="true">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTextTextPassword"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:textSize="18sp"
            android:inputType="textPassword"
            android:background="@drawable/input_background"
            android:hint="@string/hint_password"
            android:backgroundTint="@color/white"
            android:gravity="center"/>
    </com.google.android.material.textfield.TextInputLayout>
    <Button
        android:id="@+id/btnSignup"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:text="@string/signup"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="10dp"
        android:background="@drawable/input_background"
        android:layout_marginRight="10dp"/>
    <TextView
        android:id="@+id/txtLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/already"
        android:textSize="14dp"
        android:textAlignment="textEnd"
        android:textColor="@color/black"
        android:fontFamily="@font/roboto"
        android:layout_marginRight="20dp"
        android:layout_marginTop="10dp"/>
    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:orientation="horizontal"
        android:layout_marginTop="60dp"
        android:gravity="center">
    <com.google.android.material.imageview.ShapeableImageView
        android:layout_width="55dp"
        android:layout_height="55dp"
        app:shapeAppearanceOverlay="@style/Circular"
        android:scaleType="fitXY"
        android:layout_gravity="center"
        android:src="@drawable/fb" />
    <com.google.android.material.imageview.ShapeableImageView
        android:layout_width="55dp"
        android:layout_height="55dp"
        app:shapeAppearanceOverlay="@style/Circular"
        android:scaleType="fitXY"
        android:layout_marginLeft="4dp"
        android:layout_gravity="center"
        android:src="@drawable/twitter" />
    <com.google.android.material.imageview.ShapeableImageView
        android:layout_width="50dp"
        android:layout_height="50dp"
        app:shapeAppearanceOverlay="@style/Circular"
        android:scaleType="fitXY"
        android:layout_marginLeft="4dp"
        android:layout_gravity="center"
        android:src="@drawable/instagram" />
    </androidx.appcompat.widget.LinearLayoutCompat>
</LinearLayout>